@@ -1,3 +1,7 @@
+2011-11-27  Valek Filippov
+
+		* DOC: parse FcLcb97
+
 2011-11-26  Valek Filippov
 
 		* DOC: start to parse FIBs
